--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prestart": "yarn build",
     "start": "node dist/server.js",
     "preserve": "yarn build",
-    "serve": "tsc-watch --onSuccess \"node dist/server.js 9001\""
+    "serve": "tsc-watch --onSuccess \"node dist/server.js 9001\"",
+    "prepopulate":"yarn build",
+    "populate":"node dist/src/models/populate-db.js"
   },
   "author": "",
   "license": "MIT",
@@ -21,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "pg": "^8.13.0",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
     "winston": "^3.14.2"
   }
